Bug 501200 - 6 hardcoded runners are always added to the set of systemwide runners when "Extra runners" setting is in use, even if some of those are disabled systemwide
Summary: 6 hardcoded runners are always added to the set of systemwide runners when "E...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: master
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 518380 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-07 18:24 UTC by m2741
Modified: 2026-04-29 16:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m2741 2025-03-07 18:24:50 UTC
SUMMARY
I have turned off all search plugins in the "Plasma Search" section of the setting app except for the "Applications" plugin. Despite this, when I search using the Application Menu (The basic one) it still shows a separate section with system settings.

The problem can be temporarily fixed by re-enabling then re-disabling the system settings search plugin, but it returns after rebooting the computer.

STEPS TO REPRODUCE
1.  In the plasma search section of the settings application, disable all search plugins except for "Applications"
2. Reboot the computer
3. Search for an installed application using the Application Menu search

OBSERVED RESULT
After a while, usually after a reboot, the system settings plugin will reappear when searching in Application Menu and will display system settings results

EXPECTED RESULT
To only display installed applications

SOFTWARE/OS VERSIONS
Fully updated Fedora 41
KDE 6.3.2
I have noticed the bug for many months in different distros, so it it is also present in previous versions of plasma

I am able to supply more info if needed
Comment 1 m2741 2025-03-07 18:33:45 UTC
I'll add that despite displaying the results of the System Settings search plugin, the plugin still remains disabled within settings
Comment 2 Nate Graham 2025-03-07 20:17:41 UTC
Can reproduce. The code is a little wonky here:

https://invent.kde.org/plasma/plasma-desktop/-/blob/master/applets/kicker/package/contents/ui/main.qml?ref_type=heads#L149

It always starts with the same set of 6 hardcoded runners, and then you can optionally configure it to add more from a second hardcoded list, but not permanently subtract any.

I'd say we should remove all this stuff and just have it always use the set of runners configured systemwide.
Comment 3 m2741 2025-03-07 20:48:14 UTC
I'm terribly sorry, I don't know anything about programming and have no idea how to make the changes you suggested. I just thought I should let someone know as it was something that I'd noticed for a while now
Comment 4 Nate Graham 2025-03-07 23:29:22 UTC
No worries, you aren't expected to. :) Hopefully someone will be able to get to this eventually.
Comment 5 cwo 2026-04-06 10:27:38 UTC
*** Bug 518380 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2026-04-27 09:43:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6527
Comment 7 cwo 2026-04-29 16:58:18 UTC
Git commit 73a1980fac4fd9c75e7a7e204ba6306f75c356e8 by Christoph Wolk.
Committed on 29/04/2026 at 08:31.
Pushed by cwo into branch 'master'.

applets/kicker: check whether runners are enabled

The kicker backend allows you to specify the runners used for
RunnerModel, and whether these are to be merged into one list (like
in Krunner) or whether there should be individual results lists per
runner. If the list of runners is empty and results are merged, as
Kickoff does, the runners are selected according to whether they are
globally enabled in krunner. In principle, it makes sense to have some
applet-specific restrictions here; not all runners make sense with
kicker's column-wise display of results (or kickerdash's results grid),
and having too many columns makes the result display unwieldy. Disabling
them system-wide is not a good option, as that would also disable them
in krunner if users need them sometimes. The issue is that the global
settings are completely ignored; while users can in principle add extra
runners though a config setting (albeit one that is not exposed in the
UI individually, only as a global checkbox for a set of extra runners
that can be adjusted by editing appletsrc), it's not possible to disable
the kicker(dash) default runners, and any global settings are ignored.
This is because kicker instantiates single-runner models when the
results are not merged, and krunner will implicitly white-list the
requested runner in single-runner mode (which seems reasonable in the
general case).

This means that we need to do the enabledness filtering on the kicker
side, rather than relying on krunner to do it, at least in the case
where the runners are explicitly set and the results are merged. We
do this as needed (to avoid the small overhead during startup), and
listen to changes in the krunner configuration to respond to enabledness
changes.
FIXED-IN: 6.7.0

M  +41   -2    applets/kicker/runnermodel.cpp
M  +3    -0    applets/kicker/runnermodel.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/73a1980fac4fd9c75e7a7e204ba6306f75c356e8