applets/kicker: check whether runners are enabled

The kicker backend allows you to specify the runners used for
RunnerModel, and whether these are to be merged into one list (like
in Krunner) or whether there should be individual results lists per
runner. If the list of runners is empty and results are merged, as
Kickoff does, the runners are selected according to whether they are
globally enabled in krunner. In principle, it makes sense to have some
applet-specific restrictions here; not all runners make sense with
kicker's column-wise display of results (or kickerdash's results grid),
and having too many columns makes the result display unwieldy. Disabling
them system-wide is not a good option, as that would also disable them
in krunner if users need them sometimes. The issue is that the global
settings are completely ignored; while users can in principle add extra
runners though a config setting (albeit one that is not exposed in the
UI individually, only as a global checkbox for a set of extra runners
that can be adjusted by editing appletsrc), it's not possible to disable
the kicker(dash) default runners, and any global settings are ignored.
This is because kicker instantiates single-runner models when the
results are not merged, and krunner will implicitly white-list the
requested runner in single-runner mode (which seems reasonable in the
general case).

This means that we need to do the enabledness filtering on the kicker
side, rather than relying on krunner to do it, at least in the case
where the runners are explicitly set and the results are merged. We
do this as needed (to avoid the small overhead during startup), and
listen to changes in the krunner configuration to respond to enabledness
changes.

BUG: 501200
FIXED-IN: 6.7.0